# langchain-google-firestore-python

./: .coveragerc  .gitignore  .repo-metadata.json  CHANGELOG.md  DEVELOPER.md  Makefile  README.md  README.rst  integration.cloudbuild.yaml  noxfile.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  blunderbuss.yml  header-checker-lint.yml  renovate.json5  sync-repo-settings.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs.yml  lint.yml
.kokoro/: build.sh  publish-docs.sh  release.sh  requirements.in  requirements.txt
.kokoro/docker/docs/: requirements.txt
.kokoro/docs/: common.cfg  docs-presubmit.cfg
.kokoro/release/: common.cfg
docs/: chat_message_history.ipynb  conf.py  document_loader.ipynb  index.rst  record_manager.ipynb  vectorstores.ipynb
docs/langchain_google_firestore/: history.rst  loader.rst  vectorstore.rst
docs/templates/: layout.html
langchain_google_firestore/: __init__.py  vectorstores.py
scripts/: check_imports.py  check_pydantic.sh  lint_imports.sh
src/langchain_google_firestore/: __init__.py  byte_store.py  chat_message_history.py  common.py  document_converter.py  document_loader.py  main.py  record_manager.py  test_byte_store.py  test_kv_value.ipynb  vectorstores.py  version.py
src/langchain_google_firestore/utility/: distance_strategy.py  document_converter.py
src/tests/: conftest.py  test_document_converter.py  test_document_loader.py  test_vectorstores.py
src/tests/unit_tests/: conftest.py  test_chat_message_history.py  test_document_converter.py  test_document_loader.py  test_vectorstores.py
tests/: fake.py  test_byte_store.py  test_chat_message_history.py  test_document_converter.py  test_record_manager.py  test_vectorstores.py
tests/integration_tests/: test_compile.py
tests/unit_tests/: test_imports.py  test_vectorstores.py
