[project]
name = "langchain-google-firestore"
dynamic = ["version"]
description = "LangChain integrations for Google Cloud Firestore"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
authors = [
    {name = "Google LLC", email = "googleapis-packages@google.com"}
]
dependencies = [
    "langchain-core>=0.1.1, <1.0.0",
    "langchain-community>=0.0.18, <1.0.0",
    "google-cloud-firestore@git+https://github.com/pl04351820/python-firestore.git@vector",
    "more_itertools>=10.2.0, <11.0.0"
]

[tool.setuptools.dynamic]
version = {attr = "langchain_google_firestore.version.__version__"}

[project.urls]
Homepage = "https://github.com/googleapis/langchain-google-firestore-python"
Repository = "https://github.com/googleapis/langchain-google-firestore-python.git"
"Bug Tracker" = "https://github.com/googleapis/langchain-google-firestore-python/issues"
Changelog = "https://github.com/googleapis/langchain-google-firestore-python/blob/main/CHANGELOG.md"

[project.optional-dependencies]
test = [
    "black[jupyter]==23.12.1",
    "isort==5.13.2",
    "mypy==1.9.0",
    "pytest-asyncio==0.23.6",
    "pytest==7.4.4"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "google.cloud.*"
ignore_missing_imports = true
